[package]
name = "wlc-sys"
version = "0.0.8"
authors = ["Victor Brekenfeld (Drakulix) <github@drakulix.de>"]
build = "build.rs"
description = "Bindgen generated low-level wlc wrapper"
documentation = "https://drakulix.github.io/wlc/wlc-sys/"
repository = "https://github.com/Drakulix/wlc/tree/master/wlc-sys"
keywords = ["wayland", "compositor", "bindings"]
categories = ["external-ffi-bindings"]
license = "MIT"
exclude = [".travis.yml", ".rustfmt.toml"]

[package.metadata.deb]
maintainer = "Victor Brekenfeld <github@draculix.de>"
copyright = "2016, Victor Brekenfeld <github@draculix.de>"
license_file = ["LICENSE", "4"]
extended_description = """\
Bindgen generated low-level wlc wrapper \
."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/libwlc_sys.rlib", "usr/lib/rustlib/x86_64-unknown-linux-gnu/lib/", "755"],
    ["README.md", "usr/share/doc/wlc-sys/README", "644"],
]

[lib]
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.22"
cmake = { version = "0.1", optional = true }

[dependencies]
libc = "0.2"

[features]
static = ["cmake"]
